--- a/sliding_puzzle.css
+++ b/sliding_puzzle.css
@@ -20,8 +20,8 @@ img {
 }
 
 .tile:hover {
-	opacity:0.5;
-	background-color:rgb(240,240,240);
+	opacity:0.6;
+	background-color:rgb(230,230,230);
 }
 
 .text {
@@ -62,6 +62,9 @@ img {
 	color:black;
 	text-align:center;
 	font-size:2em;
+}
+
+#randomizer {
 }
 
 
