Ran through Hint/Lint and fixed several errors Works fine except when you press randomize while doing keystrokes Deleted sliding_puzzle_jquery.js as nothing was in it

--- a/sliding_puzzle.css
+++ b/sliding_puzzle.css
@@ -4,7 +4,9 @@ img {
 }
 
 #border {
-	border:3px solid black;
+	border-width:3px; 
+	border-style:solid; 
+	border-color:black;
 	padding:1px;
 	width:506px;
 	height:506px;
